fix extra whitespace at top of UserProfile posts feed

--- a/src/components/views/Posts/post.css
+++ b/src/components/views/Posts/post.css
@@ -1,3 +1,7 @@
+.post.card:first-child {
+  margin-top: 0 !important;
+}
+
 .post .card {
   border-right: none;
   border-bottom: none;
